RE-103 - Fix z-index of topbar

--- a/RecommendationEngine/RecommendationEngine/FrontEnd/src/containers/TopBar/TopBar.css
+++ b/RecommendationEngine/RecommendationEngine/FrontEnd/src/containers/TopBar/TopBar.css
@@ -33,7 +33,7 @@ html {
 .main-container {
     position: sticky;
     top: 0;
-    z-index: 999;
+    z-index: 9999;
 }
 nav {
     border-bottom: 1px;
